--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hippo_native",
-	"version": "0.0.1",
-	"main": "node_modules/expo/AppEntry.js",
+  "version": "0.0.1",
+  "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
     "start": "expo start",
@@ -12,8 +12,13 @@
   "dependencies": {
     "babel-plugin-module-resolver": "^3.1.1",
     "expo": "^30.0.1",
+    "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^6.1.0",
+    "react-navigation": "^3.0.9",
+    "styled-components": "^4.1.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
