--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "styled-components": "^4.1.3",
     "uuid": "^3.3.2"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-config-amanhimself": "^1.1.9",
