--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
+    "react-native-remote-svg": "^1.4.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "styled-components": "^4.1.3",
