--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hippo_native",
   "version": "0.0.1",
   "main": "node_modules/expo/AppEntry.js",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "babel-plugin-module-resolver": "^3.1.1",
+    "eslint-plugin-import": "^2.14.0",
     "expo": "^30.0.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
@@ -19,8 +20,7 @@
     "react-native-remote-svg": "^1.4.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
-    "styled-components": "^4.1.3",
-    "uuid": "^3.3.2"
+    "styled-components": "^4.1.3"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,6 +28,9 @@
   "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-config-amanhimself": "^1.1.9",
-    "eslint-plugin-module-resolver": "^0.8.0"
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-plugin-module-resolver": "^0.8.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "prettier": "^1.15.3"
   }
 }
