--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
 			"trailingComma": "es5",
 			"singleQuote": true,
 			"printWidth": 100
-		}
+		},
+    "no-unused-vars": ["error"]
 		]
 	},
 	"plugins": [
