--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "eslint-plugin-import": "^2.14.0",
     "expo": "^30.0.1",
@@ -20,6 +21,9 @@
     "react-native-remote-svg": "^1.4.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-axios-middleware": "^4.0.0",
     "styled-components": "^4.1.3"
   },
   "eslintConfig": {
