--- a/app.json
+++ b/app.json
@@ -29,6 +29,12 @@
     "androidStatusBar": {
       "backgroundColor": "#FE4969"
     },
-    "githubUrl": "https://github.com/brianbolnick/hippo_native"
-  }
+		"githubUrl": "https://github.com/brianbolnick/hippo_native",
+		"ios": {
+			"bundleIdentifier": "com.brianbolnick.hungryhippo"
+		},
+		"android": {
+			"package": "com.brianbolnick.hungryhippo"
+		}
+	}
 }
