--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-import": "^2.14.0",
     "expo": "^30.0.1",
     "jwt-decode": "^2.2.0",
+    "mathjs": "^5.4.2",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
