--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "@storybook/react-native": "^4.1.11",
     "eslint": "^5.12.0",
     "eslint-config-amanhimself": "^1.1.9",
     "eslint-config-prettier": "^3.6.0",
