--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "storybook": "storybook start"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -32,12 +33,18 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "@storybook/react-native": "^4.1.11",
     "eslint": "^5.12.0",
     "eslint-config-amanhimself": "^1.1.9",
     "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-module-resolver": "^0.8.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "@storybook/react-native": "^4.1.11",
+    "@storybook/addon-actions": "^4.1.11",
+    "@storybook/addon-links": "^4.1.11",
+    "@storybook/addons": "^4.1.11",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
+    "react-dom": "16.3.1"
   }
 }
