--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "axios": "^0.18.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "eslint-plugin-import": "^2.14.0",
-    "expo": "^30.0.1",
+    "expo": "^33.0.0",
     "jwt-decode": "^2.2.0",
     "mathjs": "^5.4.2",
     "prop-types": "^15.6.2",
-    "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react": "^16.8.6",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
     "react-native-remote-svg": "^1.4.0",
     "react-native-vector-icons": "^6.1.0",
@@ -33,18 +33,18 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^4.1.11",
+    "@storybook/addon-links": "^4.1.11",
+    "@storybook/addons": "^4.1.11",
+    "@storybook/react-native": "^4.1.11",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
     "eslint": "^5.12.0",
     "eslint-config-amanhimself": "^1.1.9",
     "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-module-resolver": "^0.8.0",
     "eslint-plugin-prettier": "^3.0.1",
     "prettier": "^1.15.3",
-    "@storybook/react-native": "^4.1.11",
-    "@storybook/addon-actions": "^4.1.11",
-    "@storybook/addon-links": "^4.1.11",
-    "@storybook/addons": "^4.1.11",
-    "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
     "react-dom": "16.3.1"
   }
 }
