--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "eslint-plugin-module-resolver": "^0.8.0",
     "eslint-plugin-prettier": "^3.0.1",
     "prettier": "^1.15.3",
-    "react-dom": "16.3.1"
+    "react-dom": "^16.8.6"
   }
 }
