--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.18.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "eslint-plugin-import": "^2.14.0",
-    "expo": "^33.0.0",
+    "expo": "33.0.0",
+    "expo-linear-gradient": "^5.0.1",
     "jwt-decode": "^2.2.0",
     "mathjs": "^5.4.2",
     "prop-types": "^15.6.2",
@@ -22,6 +23,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
     "react-native-remote-svg": "^1.4.0",
+    "react-native-svg": "^9.5.1",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
