--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
     "storybook": "storybook start"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.7",
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-absinthe-upload-link": "^1.5.0",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-rest": "^0.7.3",
     "axios": "^0.18.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "eslint-plugin-import": "^2.14.0",
     "expo": "33.0.0",
     "expo-linear-gradient": "^5.0.1",
+    "ingredient-math": "0.1.2",
     "jwt-decode": "^2.2.0",
     "mathjs": "^5.4.2",
     "prop-types": "^15.6.2",
